syntax = "proto3";

package cluster;
option go_package = "v1/cluster;cluster";

import "api/cluster/circuit_breaker.proto";
import "api/endpoint/endpoint.proto";

message Cluster {
  enum LbPolicy {
    ROUND_ROBIN = 0;
    LEAST_REQUEST = 1;
    RANDOM = 3;
  }

  string name = 1;
  uint32 connect_timeout = 4;
  LbPolicy lb_policy = 6;

  endpoint.ClusterLoadAssignment load_assignment = 33;
  CircuitBreakers circuit_breakers = 10;
}
